--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Username
+name: Kevin Koehncke
 
 # Short bio or description (displayed in the header)
-description: Programmer From Somewhere On Earth
+description: Master's Student at Georgia Tech
 
 
 #
@@ -16,12 +16,12 @@ description: Programmer From Somewhere On Earth
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: agarwal.akshay.akshay8@gmail.com
+  email: kkoehncke@gmail.com
   facebook:
   flickr:
-  github: AkshayAgarwal007
+  github: kkoehncke
   instagram:
-  linkedin: akshay-agarwal-782018a4
+  linkedin: kkoehncke
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
@@ -39,7 +39,7 @@ google_analytics:
 
 # Your website URL (e.g. http://akshayagarwal007.github.io)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: http://kkoehncke.github.io
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
